--- a/A01369984_W2.ipynb
+++ b/A01369984_W2.ipynb
@@ -13,9 +13,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Teorema de limite central***\n",
+    "**Teorema de limite central (CLT)** - Es un\n",
     "\n",
-    "Es un"
+    "**Distribución de probabilidad uniforme**\n",
+    "\n",
+    "La *función de densidad de probabilidad* para una variable uniforme es :\n",
+    "> ###### f(x) = {(1/b-a) ; a <= x <= b}\n",
+    "> ###### ¬{0  ; otherwise}\n",
+    "La función es igual a cero para valores fuera del rango de *[a,b]*.\n",
+    "\n",
+    "El *area bajo la linea* (1/(b-a)) es 1 (100%) ya que es un PDF. \n",
+    "\n",
+    "El *valor esperado* de una variable x esta dado por el punto medio del rango de *a* & *b*\n",
+    "> ###### E(x) = (a + b) / 2\n",
+    "*En otras palabras el valor esperado de una variable aleatoria es la media teorica de las variable de acuerdo con su distribución de probabilidad.*\n",
+    "\n",
+    "La *varianza* de una variable con distribución uniforme es:\n",
+    "> ###### Var(x) = (b - a)^2 / 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Simulación de Monte Carlos**\n",
+    "\n",
+    "La creación de números aleatorios que siguen distribuciones de probabilidad específicas se suele llamar simulación de Monte Carlos.\n",
+    "\n"
    ]
   },
   {
@@ -24,10 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importar librerias\n",
     "from symbulate import *\n",
     "#'exec(%matplotlib inline)' \n",
     "import matplotlib\n",
-    "\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -50,7 +74,9 @@
     }
    ],
    "source": [
-    "# clear the plot space:\n",
+    "# Simulación con distribución de probabilidad uniforme\n",
+    "\n",
+    "# Limpiar espacio de gráfica\n",
     "plt.clf()\n",
     "# Define the probability type of function as uniform (probability space)\n",
     "P = Uniform(0,40)\n",
@@ -63,15 +89,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reto"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Genera 10.000 grupos de 25 variables aleatorias uniformes \n",
+    "# para terminar en una matriz de 10.000 filas y 25 columnas\n",
+    "\n",
     "# Define the probability space as a vector of 25 uniform random numbers:\n",
     "P = Uniform(0,40) ** 25\n",
+    "\n",
     "# Define XVECTOR as a vector of random variables with 25 random values \n",
     "XVECTOR =RV(P)\n",
+    "\n",
     "# Simulate 10,000 vectors to get a matrix  \n",
     "xmatrix=XVECTOR.sim(10000)\n",
     "#xmatrix\n"
