--- a/A01369984_W2.ipynb
+++ b/A01369984_W2.ipynb
@@ -13,8 +13,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Teorema de limite central (CLT)** - Es un\n",
+    "**Teorema de limite central (CLT)**\n",
     "\n",
+    "Para una variable aleatoria con cualquier probabilidad de distribución, cuando se toma una muestra, la media de la muestra tendrá las siguientes caracteristicas.\n",
+    "\n",
+    "1. La distribución de las medias de la muestra será cercana a una distribución normal, cuando se toman muchos grupos(el tamaño de los grupos debe ser igual o mayor que 25). Esto sucedo no sólo con la media de la muestra, sino también con otras combinaciones lineales como la suma o el promedio ponderado de la variable.\n",
+    "\n",
+    "2. La desviaión estandar de las medias de la muestra serpa mucho menor que la desviación estandar de lo sindividuos. Esto quiere decir que la desviación estandar de la muestra se reducira con un factor de *1/sqrt(N)*\n",
+    "\n",
+    "El CLT dice que, sin importar la distribución original de probabilidad de cualquier variable aleatoria, si tomamos grupos de esta variable:\n",
+    "\n",
+    "* los medios de estos grupos tendrán una distribución de probabilidad cercana a la distribución normal\n",
+    "\n",
+    "* la desviación estándar de la media se reducirá según el número de elementos de cada grupo.\n",
+    "\n",
+    "La varianza esperada de la media de la muestra es igual a la varianza de los individuos dividida por N\n",
+    "> ###### VAR(mediaX) = [VAR(x)] / N \n",
+    "\n",
+    "La desviación estándar esperada de la media muestral de una variable aleatoria es igual a la desviación estándar individual de la variable dividida por la raíz al cuadrado de N.\n",
+    "\n",
+    "> ###### SD(mediaX) = SD(X) / sqrt(N)\n",
+    "\n",
+    "De esta manera se pueden hacer inferencias sobre la media muestral de cualquier variable aleatoria.Normalmente se analiza los medios de variable cuando se busca aprender algo sobre el mundo real.\n",
+    "\n",
+    "Con la CLT tenemos una teoría para hacer inferencias sobre las medias poblacionales y la desviación estándar de cualquier variable aleatoria usando muestras. El método para hacer este tipo de inferencias es la Prueba de Hipótesis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Distribución de probabilidad uniforme**\n",
     "\n",
     "La *función de densidad de probabilidad* para una variable uniforme es :\n",
@@ -658,6 +686,76 @@
     "y.plot()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Prueba de Hipotesis**\n",
+    "\n",
+    "La idea de la prueba de hipótesis es proporcionar evidencia fuerte - usando hechos - sobre una creencia específica que es apoyada generalmente por una teoría o sentido común. Esta creencia es generalmente la creencia de la persona que realiza la prueba de hipótesis. Esta creencia se llama la Hipótesis Alternativa.\n",
+    "\n",
+    "la única forma de convencer es mediante el uso de datos y un método estadístico riguroso\n",
+    "\n",
+    "***H0** : La Hipotesis nula*\n",
+    "Esta hipotesis es la opuesta a la creencia (Hipotesis Alternativa). *media hipotética* \n",
+    "* comienza siendo la hipotesis aceptada como verdadera.\n",
+    "\n",
+    "***Ha** : La hipotesis alternativa**\n",
+    "Basada en la creencia\n",
+    "* comienza siendo la hipotesis rechazda, la no verdadera."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gracias al CLT es posible saber que:\n",
+    "- La media de esta muestra se comportará MUY SIMILAR a una distribución normal.\n",
+    "- La desviación estándar de esta muestra es mucho menor que la desviación estándar de los individuos de la muestra y esto puede calcularse dividiendo la desviación estándar individual por la raíz cuadrada del tamaño de la muestra.\n",
+    "- Con una probabilidad de aproximadamente 95%, la media de la muestra tendrá un valor entre 2 desviaciones estándar menos que su media REAL (en este caso =0, la media de la H0) y 2 desviaciones estándar más alto que su media\n",
+    "\n",
+    "1. Recoger una muestra aleatoria relacionada con la creencia. La creencia es sobre la media de una variable X; se cree que la media de X es mayor que cero.\n",
+    "\n",
+    "Mostrar que la media de la muestra calculada de X es superior a cero (la media hipotética de H0) más 2 desviaciones estándar, con ello existiría una evidencia estadística muy poderosa para demostrar que la probabilidad de que la verdadera media de X sea mayor que cero será superior al 95%.\n",
+    "\n",
+    "2. Calcular la media y la desviación estándar de la muestra.\n",
+    "\n",
+    " Calcular una medida fácil para saber rápidamente cuán lejos está la media de la muestra de la media hipotética (cero), pero medida en # de desviaciones estándar de la media. Esta nueva distancia estandarizada se denomina generalmente z o t.\n",
+    "\n",
+    "3. Para la prueba de hipótesis se usará la distribución t-Student en lugar de la distribución z normal.\n",
+    "\n",
+    "Si z es 2 o más, se puede decir que la media de la muestra es 2 desviaciones estándar por encima de la supuesta media verdadera (cero), así que podría convencer a Diablito acerca de su creencia de que la verdadera media es mayor que cero.\n",
+    "\n",
+    "Aunque la CLT dice que la media de una muestra se comporta como normal, se ha encontrado que la CLT es más consistente con la distribución de probabilidad t-Student. En realidad, la distribución t-Student es muy, muy similar (casi la misma) a la distribución normal cuando el tamaño de la muestra es mayor que 30. Pero para muestras pequeñas, t-Student hace un trabajo mucho mejor en representar lo que sucede con la CLT para muestras pequeñas en comparación con la distribución normal z.\n",
+    "\n",
+    "*La prueba de hipótesis para comparar la media de una variable con un valor o con otra media se denomina prueba t.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reto\n",
+    "Instrucciones:\n",
+    "\n",
+    "Recopilar datos reales para acciones de Microsoft (MSFT) y realizar una prueba de hipótesis para ver si la media de las devoluciones de cc mensuales de Microsoft es mayor que cero.\n",
+    "\n",
+    "Ejecute una prueba t para comparar si el retorno medio de MSFT es mayor que cero.\n",
+    "\n",
+    "Realizar una prueba de hipótesis:\n",
+    "1. DEFINA LA VARIABLE DEL ESTUDIO. En este caso será la media de MSFT cc devuelve\n",
+    "\n",
+    "2. ESCRIBIR el NULL Y LA HIPÓTESIS ALTERNATIVA. \n",
+    "\n",
+    "3. CALCULAR EL ERROR ESTÁNDAR, QUE ES LA DESVIACIÓN ESTÁNDAR DE LA VARIABLE DE ESTUDIO.\n",
+    "\n",
+    "4. CALCULAR LA estadística t (valor t). EXPLICAR/INTERPRETAR la estadística t.\n",
+    "\n",
+    "5. CALCULAR EL INTERVALO DE CONFIANZA del 95% DE LA MEDIA DE LA MUESTRA\n",
+    "\n",
+    "6. ESCRIBA LA CONCLUSIÓN DE LA PRUEBA t."
+   ]
   }
  ],
  "metadata": {
@@ -676,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
