--- a/A01369984_W3.ipynb
+++ b/A01369984_W3.ipynb
@@ -770,6 +770,125 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Calculo de covarianza y correlación**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Covarianza\n",
+    "# aplicando la formula se obtiene \n",
+    "msft_mean = r['MSFT'].mean()\n",
+    "gspc_mean = r['GSPC'].mean()\n",
+    "N = r['GSPC'].count()\n",
+    "sum_of_prod = ((r['MSFT'] - msft_mean) * (r['GSPC'] - gspc_mean) ).sum()  \n",
+    "cov = sum_of_prod / (N-1)\n",
+    "cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Covarianza con numpy\n",
+    "covm = np.cov(r['MSFT'],r['GSPC'])\n",
+    "covm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### La función *.cov* calcula la matriz de covarianza utilizando ambos retornos. Podemos encontrar la covarianza en los elementos no diagonales, que serán los mismos valores ya que la matriz de covarianza es simétrica.\n",
+    "\n",
+    "###### Los valores diagonales tienen las varianzas de cada retorno ya que la covarianza de una variable consigo misma es en realidad su varianza *(Cov(X,X) = Var(X))*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extraer el elemento de la fila 1 y columna 2 de la matriz\n",
+    "# para obtener la covarianza entre los retornos de MSFT y GSPC\n",
+    "cov = covm[0,1]\n",
+    "cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matriz de correlación con numpy\n",
+    "# usar funcion corrcoef \n",
+    "corr = np.corrcoef(r['MSFT'],r['GSPC'])\n",
+    "corr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### La matriz de correlación tendrá 1 en su diagonal, ya que la correlación de una variable consigo misma es 1. El valor no diagonal será la correlación real entre las 2 variables correspondientes (la de la fila y la de la columna)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculo manual de correlación usando los valores de covarianza\n",
+    "corr2 = cov / (r['MSFT'].std() * r['GSPC'].std())\n",
+    "corr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# función scipy pearsonr para calcular la correlación y el pvalue de 2 cola\n",
+    "from scipy.stats import pearsonr\n",
+    "corr2 = pearsonr(r['MSFT'],r['GSPC'])\n",
+    "corr2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El pvalue es casi cero.  Los rentornos de MSFT y GSPC tienen una correlación positiva y muy significativa (en el nivel de confianza de 99.9999...%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Ejercicios y notas extras"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -797,29 +916,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#H0: mean(r_AAPL) - mean(r_MSFT) = 0\n",
-    "#Ha: mean(r_AAPL) - mean(r_MSFT) <>0"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es un indice de las empresas más grandes de EUA \n",
-    "\n",
-    "Retornos "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Precios"
+    "* H0: mean(r_AAPL) - mean(r_MSFT) = 0\n",
+    "* Ha: mean(r_AAPL) - mean(r_MSFT) <>0"
    ]
   },
   {
@@ -828,11 +929,11 @@
    "source": [
     "**Medidas de relación lineal**\n",
     "\n",
-    "*el error estandar es una desviación estandar de la variable de estudio analizada (que tanto varia con respecto a si misma) en variables de series de tiempo* ***Time Series Datasets*** **\n",
+    "*el error estandar es una desviación estandar de la variable de estudio analizada (que tanto varia con respecto a si misma) en variables de series de tiempo* ***Time Series Datasets*** \n",
     "\n",
     "Empirical value - \n",
     "\n",
-    "pvalue = 2 * st.t.sf(np.abs(t), df) \n",
+    "> pvalue = 2 * st.t.sf(np.abs(t), df) \n",
     "\n",
     "\n",
     "variable uno / variable dos / asumes que son diferentes\n",
@@ -841,31 +942,6 @@
     "\n",
     "siempre se busca rechazar la hipotesis nula \n",
     "pvalue \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Central limit theorem "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Dos formas de medir la relación entre las variables\n",
-    "Relaciones espurias "
    ]
   }
  ],
