--- a/A01369984_W1.ipynb
+++ b/A01369984_W1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#### **Workshop #1**\n",
     "\n",
-    "> **Angeles Arista Huerta** */  Agosto 12, 2022*"
+    "> **Angeles Arista Huerta** */  Agosto 2022*"
    ]
   },
   {
