--- a/A01369984_W2.ipynb
+++ b/A01369984_W2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Workshop #2**\n",
     "\n",
-    "**Angeles Arista Huerta** */  Agosto 15, 2022*"
+    "**Angeles Arista Huerta** */  Agosto 2022*"
    ]
   },
   {
