--- a/A01369984_W4.ipynb
+++ b/A01369984_W4.ipynb
@@ -77,6 +77,79 @@
     "* ###### **r(M,t) - es el retorno de mercado en el tiempo t**\n",
     "* ###### **b0 & b1 - son definidos como coeficientes de regresión**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Tipos de estructura de datos**\n",
+    "\n",
+    "El modelo de mercado es una modelo de regresión de series temporales. En ell es posible analizar la relación entre 2 variables que representan una caracteristica o atributo(retornos) de dos *sujetos* a lo largo del tiempo: ***Un indice bursátil y un indice de mercado.***\n",
+    "\n",
+    "*La estructura o tipos de datos en un modelo de mercado son series temporales.*\n",
+    "###### (Este tipo de modelos de regresión se denomina regresión de serie temporal extraída.)\n",
+    "\n",
+    "Existen tres tipos de datos utilizados en modelos de regresión:\n",
+    "* *Series temporales*: cada observación representa un perioso y cada columna representa una o más variables, las cuales son caracteristicas de uno o más sujetos. Se tienen uno o más variables medidas en un periodi de tiempo.\n",
+    "* *Sección transversal*: cada observación representa un sujeto en un solo periodo de tiempo, y cada columna representa variables o caracteristicas de los sujetos.\n",
+    "* *Datos de panel*: esta es una combinación estructura de series temporales con sección transversal*\n",
+    "\n",
+    "***El modelo de mercado se puede considerar como un modelo de regresión de series temporales.***\n",
+    "\n",
+    "Otra manera de clasidicar un modelo de regresión es basandonos en la cantidad de variables independientes. \n",
+    " * Si el modelo de regresión considera solo una variable independiente, es un modelo de *regresión simple*. \n",
+    " * Si el modelo considera mas de una variable independiente, es un modelo de *regresión multiple*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "En el caso de una regresión simple, es necesario estimar los mejores valores de las coeficientes de beta0 y beta1 . Si Y es una variable dependiente y X es una variable independiente, la ecuación de regresión es:\n",
+    "> yi = b0 + b1(xi) + Ei\n",
+    "\n",
+    "La regresión lineal esta dada por el valor esperado de Y (y_prima):\n",
+    "> E[yi] = b0 + b1(xi) = yi'\n",
+    "\n",
+    "###### donde:\n",
+    "* i - va de 1 a N(total de observaciones de la muestra)\n",
+    "\n",
+    "Las coeficientes de beta0 y beta1  definen la regresión lineal, por lo que:\n",
+    "* Si beta0 cambia, la intercección de la linea de mueve .\n",
+    "* Si beta1 cambia, la pendiente de la linea cambia.\n",
+    "\n",
+    "Si se traza todos los pares de (Xi, Yi) es posible visualizar si existe una relación lineal entre Y y X. *(En un trazado de dispersión, cada par de (Xi, Yi) es un punto del trazado.)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**El metodo OLS (Ordinaty Least Square)**\n",
+    "\n",
+    "*Minimo ordinario cuadrado*: Es un metodo de optimización para estimar los mejores valores para los coeficientes de beta y sus estandar errors en un modelo de regresión lineal.\n",
+    "\n",
+    "El proposito es encontrar la mejor regresión lineal que represente de la mejor manera todos los puntos de (Xi, Yi).\n",
+    "\n",
+    "El OLS intenta minimizar la suma de los cuadrados del error de la ecuación de regresión. \n",
+    "\n",
+    "Su objetivo es:\n",
+    "* Minimizar:\n",
+    "> Sum (y - y')^2\n",
+    "\n",
+    "Al sustituirlo en la ecuación de regresión se obtiene: \n",
+    "* Minimizar:\n",
+    "> Sum[yi - (b0 + b1 * xi)]^2\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
