--- a/A01369984_W4.ipynb
+++ b/A01369984_W4.ipynb
@@ -295,6 +295,24 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta función en una curva simple. La suma de los errores cuadrados cambia con diferentes pares de valores (b0,b1).\n",
+    "\n",
+    "El punto más bajo será el valor optimo de (b0,b1) donde la suma de los errores cuadrados es el minimo de todos. \n",
+    "\n",
+    "Para calcular el punto optimo:\n",
+    "* Igualar las derivadas parciales de la función con respecto a b0 y b1.\n",
+    "> derivada parcial = 2 * (-1) * sum(yi - (b0 + b1 * x1)) = 0\n",
+    "\n",
+    "* Dividir ambos lados entre 2:\n",
+    "> sum [yi - (b0 + b1 * xi)] = 0\n",
+    "\n",
+    "Ahora se tiene dos ecuaciones con dos incognitas. las cuales son b0 & b1, ya que los valores X & Y se consideran dados desde el inicio del problema.\n"
+   ]
   }
  ],
  "metadata": {
