--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -1199,7 +1199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**SE PUEDE OBSERVAR QUE LA INDUSTRIA CON MENOR CANTIDAD DE EMPRESAS ES LA ***INDUSTRIA COMERCIAL*** CON UNA CANTIDAD DE ***231*****\n",
+    "**SE PUEDE OBSERVAR QUE LA INDUSTRIA CON MENOR CANTIDAD DE EMPRESAS ES LA** ***INDUSTRIA COMERCIAL*** **CON UNA CANTIDAD DE** ***231***\n",
     "\n",
     "**Y LA QUE POSEE MÁS EMPRESAS ES LA ***INDUSTRIA DE MANUFACTURA*** CON UN TOTAL DE ***1565*****"
    ]
