--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -250,7 +250,15 @@
    "source": [
     "# Merge\n",
     "US_Firms = firms.merge(us, left_on='Ticker', right_on='firm')\n",
-    "US_Firms = US_Firms.drop([\"N\", \"Class\", \"Country\\nof Origin\", \"Type of Asset\", \"Exchange / Src\", \"Sector\\nEconomatica\", \"Sector NAICS\\nlast available\", \"partind\"], axis = 1)\n",
+    "US_Firms = US_Firms.drop([\"N\", \n",
+    "                          \"Class\", \n",
+    "                          \"Country\\nof Origin\", \n",
+    "                          \"Type of Asset\", \n",
+    "                          \"Exchange / Src\", \n",
+    "                          \"Sector\\nEconomatica\", \n",
+    "                          \"Sector NAICS\\nlast available\", \n",
+    "                          \"partind\"], \n",
+    "                         axis = 1)\n",
     "US_Firms.head(0)"
    ]
   },
@@ -1201,7 +1209,7 @@
    "source": [
     "**SE PUEDE OBSERVAR QUE LA INDUSTRIA CON MENOR CANTIDAD DE EMPRESAS ES LA** ***INDUSTRIA COMERCIAL*** **CON UNA CANTIDAD DE** ***231***\n",
     "\n",
-    "**Y LA QUE POSEE MÁS EMPRESAS ES LA ***INDUSTRIA DE MANUFACTURA*** CON UN TOTAL DE ***1565*****"
+    "**Y LA QUE POSEE MÁS EMPRESAS ES LA** ***INDUSTRIA DE MANUFACTURA*** **CON UN TOTAL DE** ***1565***"
    ]
   },
   {
@@ -1216,9 +1224,9 @@
    "metadata": {},
    "source": [
     " Para cada sector (y para todos los sectores), \n",
-    "> ###### ¿qué puede decir sobre el tamaño típico de la empresa en términos de valor de mercado y valor contable? \n",
-    ">###### ¿Cuánto cambian estas variables dentro de cada industria? \n",
-    ">###### ¿Cómo se distribuye el tamaño de la empresa (en valor de mercado)?\n",
+    "> ###### ¿Qué puede decir sobre el tamaño típico de la empresa en términos de valor de mercado y valor contable? \n",
+    "> ###### ¿Cuánto cambian estas variables dentro de cada industria? \n",
+    "> ###### ¿Cómo se distribuye el tamaño de la empresa (en valor de mercado)?\n",
     "**RESPUESTA.**"
    ]
   },
@@ -1239,6 +1247,7 @@
    "source": [
     "# Para todas las industrias en función del valor de mercado y valor contable\n",
     "print('                      ','Valor de mercado', ' Valor contable')\n",
+    "\n",
     "print('Todas las industrias : ',\n",
     "                            round(US_Firms[\"Market Value\"].median(),3),\n",
     "                            '     ',\n",
@@ -1280,8 +1289,13 @@
     "ax1 = fig.add_subplot(221)\n",
     "ax2 = fig.add_subplot(222)\n",
     "\n",
-    "sns.boxplot(x=\"Market Value\",data=US_Firms, ax=ax1).set_title(\"All Industries Market Value\")\n",
-    "sns.boxplot(x=\"Book Value of the Firms\",data=US_Firms, ax=ax2).set_title(\"All Industrias Book Value for Commercial\")"
+    "sns.boxplot(x=\"Market Value\",\n",
+    "            data=US_Firms, \n",
+    "            ax=ax1).set_title(\"All Industries Market Value\")\n",
+    "\n",
+    "sns.boxplot(x=\"Book Value of the Firms\",\n",
+    "            data=US_Firms, \n",
+    "            ax=ax2).set_title(\"All Industrias Book Value for Commercial\")"
    ]
   },
   {
@@ -1304,6 +1318,7 @@
    "source": [
     "# Para cada industria valor de mercado y valor contable\n",
     "print('Industria            ','Valor de mercado', ' Valor contable')\n",
+    "\n",
     "print('Commercial :          ', round(comercial[\"Market Value\"].median(),3),\n",
     "                            '     ',\n",
     "                            round(comercial[\"Book Value of the Firms\"].median(),3))\n",
@@ -1320,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 572,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1344,7 @@
        "Text(0.5, 1.0, 'Book Value for Commercial')"
       ]
      },
-     "execution_count": 552,
+     "execution_count": 572,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1353,8 +1368,17 @@
     "ax1 = fig.add_subplot(221)\n",
     "ax2 = fig.add_subplot(222)\n",
     "\n",
-    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",y=\"Market Value\",data=comercial, hue=\"Sector NAICS\\nlevel 1\",ax=ax1).set_title(\"Market Value\")\n",
-    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",y=\"Book Value of the Firms\",data=comercial, hue=\"Sector NAICS\\nlevel 1\",ax=ax2).set_title(\"Book Value for Commercial\")"
+    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",\n",
+    "            y=\"Market Value\",\n",
+    "            data=comercial, \n",
+    "            hue=\"Sector NAICS\\nlevel 1\",\n",
+    "            ax=ax1).set_title(\"Market Value\")\n",
+    "\n",
+    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",\n",
+    "            y=\"Book Value of the Firms\",\n",
+    "            data=comercial, \n",
+    "            hue=\"Sector NAICS\\nlevel 1\",\n",
+    "            ax=ax2).set_title(\"Book Value for Commercial\")"
    ]
   },
   {
@@ -1392,8 +1416,17 @@
     "ax1 = fig.add_subplot(221)\n",
     "ax2 = fig.add_subplot(222)\n",
     "\n",
-    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",y=\"Market Value\",data=services, hue=\"Sector NAICS\\nlevel 1\",ax=ax1).set_title(\"Market Value for Services\")\n",
-    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",y=\"Book Value of the Firms\",data=services, hue=\"Sector NAICS\\nlevel 1\",ax=ax2).set_title(\"Book Value for Services\")"
+    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",\n",
+    "            y=\"Market Value\",\n",
+    "            data=services, \n",
+    "            hue=\"Sector NAICS\\nlevel 1\",\n",
+    "            ax=ax1).set_title(\"Market Value for Services\")\n",
+    "\n",
+    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",\n",
+    "            y=\"Book Value of the Firms\",\n",
+    "            data=services, \n",
+    "            hue=\"Sector NAICS\\nlevel 1\",\n",
+    "            ax=ax2).set_title(\"Book Value for Services\")"
    ]
   },
   {
@@ -1431,13 +1464,22 @@
     "ax1 = fig.add_subplot(221)\n",
     "ax2 = fig.add_subplot(222)\n",
     "\n",
-    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",y=\"Market Value\",data=financial, hue=\"Sector NAICS\\nlevel 1\",ax=ax1).set_title(\"Market Value for Financial Services\")\n",
-    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",y=\"Book Value of the Firms\",data=financial, hue=\"Sector NAICS\\nlevel 1\",ax=ax2).set_title(\"Book Value for Financial Services\")"
+    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",\n",
+    "            y=\"Market Value\",\n",
+    "            data=financial, \n",
+    "            hue=\"Sector NAICS\\nlevel 1\",\n",
+    "            ax=ax1).set_title(\"Market Value for Financial Services\")\n",
+    "\n",
+    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",\n",
+    "            y=\"Book Value of the Firms\",\n",
+    "            data=financial, \n",
+    "            hue=\"Sector NAICS\\nlevel 1\",\n",
+    "            ax=ax2).set_title(\"Book Value for Financial Services\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 573,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1488,7 @@
        "Text(0.5, 1.0, 'Book Value for Manufacturing')"
       ]
      },
-     "execution_count": 557,
+     "execution_count": 573,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1470,8 +1512,17 @@
     "ax1 = fig.add_subplot(221)\n",
     "ax2 = fig.add_subplot(222)\n",
     "\n",
-    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",y=\"Market Value\",data=manufacturing, hue=\"Sector NAICS\\nlevel 1\",ax=ax1).set_title(\"Market Value for Manufacturing\")\n",
-    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",y=\"Book Value of the Firms\",data=manufacturing, hue=\"Sector NAICS\\nlevel 1\",ax=ax2).set_title(\"Book Value for Manufacturing\")"
+    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",\n",
+    "            y=\"Market Value\",\n",
+    "            data=manufacturing, \n",
+    "            hue=\"Sector NAICS\\nlevel 1\",\n",
+    "            ax=ax1).set_title(\"Market Value for Manufacturing\")\n",
+    "\n",
+    "sns.boxplot(x=\"Sector NAICS\\nlevel 1\",\n",
+    "            y=\"Book Value of the Firms\",\n",
+    "            data=manufacturing, \n",
+    "            hue=\"Sector NAICS\\nlevel 1\",\n",
+    "            ax=ax2).set_title(\"Book Value for Manufacturing\")"
    ]
   },
   {
