--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -1197,6 +1197,7 @@
    "source": [
     "# Conteo por industrias\n",
     "print('     Industria          #')\n",
+    "\n",
     "print('Commercial :         ', comercial.groupby([\"firm\"]).sum().shape)\n",
     "print('Services :           ', services.groupby([\"firm\"]).sum().shape)\n",
     "print('Financial Services : ', financial.groupby([\"firm\"]).sum().shape)\n",
@@ -1743,7 +1744,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "top  = us_firms2022.sort_values('Book value of the firms', ascending=False).head(10) # Valor contable de la empresa\n",
+    "#Valor contable de la empresa\n",
+    "top  = US_Firms.sort_values('Book Value of the Firms', ascending=False).head(10)\n",
     "top10"
    ]
   },
